# tablehog

./: .gitignore  Cargo.toml  README.md
opentable-monitor/: Cargo.toml
opentable-monitor/src/: lib.rs
recordings/: opentable-tls-handshake.pcapng  queries.txt
tablehog/: Cargo.toml  note.txt
tablehog-tui/: Cargo.toml
tablehog-tui/src/: main.rs
tablehog/src/: lib.rs  main.rs
