[workspace]

members = ["tablehog"]

[workspace.dependencies]

anyhow = "1.0.82"
crossterm = "0.27.0"
indoc = "2.0.5"
ratatui = "0.26.2"
reqwest = { version = "0.12.3", features = ["json", "native-tls"], default-features = false }
scraper = "0.19.0"
serde_json = { version = "1.0.116", features = ["std"] }
time = { version = "0.3.36", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1.37.0", features = ["full"] }
