[workspace]

members = ["tablehog", "tablehog-tui"]

[workspace.dependencies]

anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "=0.6.3"
crossterm = "0.27.0"
indoc = "2.0.5"
libc = "0.2.153"
ratatui = "0.26.2"
reqwest = { version = "0.12.3", features = ["json", "native-tls"], default-features = false }
scraper = "0.19.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["std"] }
time = { version = "0.3.36", features = ["formatting", "macros", "local-offset", "parsing"] }
tokio = { version = "1.37.0", features = ["full"] }
