[package]
name = "tablehog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
indoc.workspace = true
libc.workspace = true
ratatui.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true